# Forge

./: .gitignore  CLAUDE.md  README.md  appcast.xml  pyproject.toml
.flowforge/: config.json  registry.json
.flowforge/prompts/: add-a-slight-border-around-each-major-category-ide.md  should-move-the-brain-button-and-the-plus-button-s.md
.forge/: config.json  plan.md  registry.json
.forge/prompts/: add-hidereveal-for-sidebar-projects.md  brainstorm-mode.md  change-app-corner-radius-to-exactly-the-same-as-wa.md  macos-app-project-setup.md  pi-deployment-script.md  refine-feature-doesnt-work-in-ios-should-consider-.md  rename-the-app-from-flowforge-to-just-forge.md  server-basic-auth.md  wave-1-brainstorm-pipeline.md  (+2 more)
FlowForgeApp/: .gitignore  BUILD_SUMMARY.md  QUICKSTART.md  README.md  project.yml
ForgeApp/: BUILD_SUMMARY.md  ExportOptions.plist  QUICKSTART.md  README.md  project.yml
docs/: ARCHITECTURE_FIXES.md  PLAN.md  RASPBERRY_PI_SETUP.md  SESSION_CONTEXT.md  WORKFLOW.md  WORKFLOW_TEMPLATE.md
flowforge/: __init__.py  __main__.py  brainstorm.py  cache.py  cli.py  config.py  init.py  intelligence.py  mcp_server.py  merge.py  pi_registry.py  prompt_builder.py  registry.py  remote.py  server.py  sync.py  worktree.py
forge/: __init__.py  __main__.py  brainstorm.py  cli.py  config.py  github_health.py  init.py  intelligence.py  mcp_server.py  merge.py  paths.py  pi_registry.py  prompt_builder.py  registry.py  remote.py  server.py  session_memory.py  terminal.py  worktree.py
scripts/: check-deploy-scope.sh  deploy-to-testflight.sh  release-macos.sh  ship.sh
(+79 files in other folders)
