[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowforge"
version = "0.1.0"
description = "AI-assisted parallel development orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Brian Hondorp" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
forge = "flowforge.cli:app"
forge-server = "flowforge.server:main"

[tool.hatch.build.targets.wheel]
packages = ["flowforge"]
